--- a/toRename.env
+++ b/toRename.env
@@ -1,6 +1,9 @@
 # Discord Botのトークン
 DISCORD_BOT_TOKEN="token"
 
+# Yahoo!APIのClientキー
+YAHOO_APPID="client key"
+
 # RCONサーバーの情報
 RCON_HOST="127.0.0.1"    # サーバーIP、ログファイル監視するならまず同PCなのでlocalhost
 RCON_PORT=25575          # rconポート
